--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,9 @@
 
   <title>my_cool_game</title>
   <link rel="manifest" href="manifest.json">
+
+  <script src="https://unpkg.com/canvaskit-wasm@0.33.0/bin/canvaskit.js"></script>
+  <link rel="preload" href="https://unpkg.com/canvaskit-wasm@0.33.0/bin/canvaskit.wasm" as="fetch" crossOrigin="anonymous">
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
