--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>my_cool_game</title>
+  <title>My Cool Game</title>
   <link rel="manifest" href="manifest.json">
 
   <script src="https://unpkg.com/canvaskit-wasm@0.33.0/bin/canvaskit.js"></script>
